[package]
name = "micro"
version = "0.1.1"
authors = ["FredJeck <frederic.jecker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
chrono = "0.4"
simple-error = "0.2.2"
regex = "1"
serde_yaml = "0.8.15"
tokio = { version = "1", features = ["full"] }
warp = "0.3"